# graphic-python-calculator

./: .gitignore  LICENSE  README.md  app.py  meson.build  org.example.App.json
data/: org.example.App.desktop.in  org.example.App.gschema.xml
po/: meson.build
src/: main.py  meson.build  pycalk.in  window.py  window.ui
